# Solomon

./: .env.example  .gitignore  .pre-commit-config.yaml  DESIGN.md  Dockerfile  README.md  conftest.py  docker-compose.debug.yml  docker-compose.yml  manage.py  pyproject.toml
.github/: copilot-instructions.md
accounts/: apps.py  forms.py  urls.py  views.py
accounts/tests/: __init__.py
buildings/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
buildings/migrations/: 0001_initial.py  0002_building_common_area_rental_building_common_rooms_and_more.py
buildings/tests/: __init__.py  test_buildings.py
core/: admin.py  apps.py  mixins.py  models.py  permissions.py  urls.py  views.py
core/management/commands/: setup_groups.py
core/tests/: __init__.py  test_audit_and_shares.py
flats/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
flats/migrations/: 0001_initial.py  0002_flat_cellar_unit_flat_gas_installed_flat_has_balcony_and_more.py
flats/tests/: __init__.py  test_flats.py
locale/cs/LC_MESSAGES/: django.mo  django.po
owners/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
owners/migrations/: 0001_initial.py  0002_owner_contact_address_owner_deputy_contact_and_more.py
owners/tests/: __init__.py  test_owners.py
solomon/: __init__.py  asgi.py  context_processors.py  urls.py  wsgi.py
solomon/settings/: __init__.py  base.py  dev.py  prod.py  test.py
static/css/: material-dark.css
templates/: base.html  home.html
templates/accounts/: user_detail.html  user_form.html  user_list.html
templates/buildings/: building_confirm_delete.html  building_detail.html  building_form.html  building_list.html
templates/core/: auditlog_detail.html  auditlog_list.html
templates/flats/: flat_confirm_delete.html  flat_detail.html  flat_form.html  flat_list.html
templates/includes/: form_fields.html  navbar.html  pagination.html  sidebar.html  topbar.html
templates/owners/: flatowner_confirm_delete.html  flatowner_form.html  owner_confirm_delete.html  owner_detail.html  owner_form.html  owner_list.html
templates/registration/: login.html  password_change.html  password_change_done.html
templates/tenants/: tenant_confirm_delete.html  tenant_detail.html  tenant_form.html  tenant_list.html
tenants/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
tenants/migrations/: 0001_initial.py  0002_tenant_contact_address_tenant_permanent_address.py
tenants/tests/: __init__.py  test_tenants.py
